# pons-starter

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  shader.cpp  shader.h  utils.h
assets/: container.DDS  container_specular.DDS  matrix.DDS  uvchecker.DDS  uvtemplate.DDS
assets/crytek_sponza/: sponza.mtl
assets/crytek_sponza/textures/: background.dds  background_bump.dds  chain_texture.dds  chain_texture_bump.dds  chain_texture_mask.dds  floor_gloss.dds  lion.dds  lion2_bump.dds  lion_bump.dds  spnza_bricks_a_bump.dds  spnza_bricks_a_diff.dds  spnza_bricks_a_spec.dds  sponza_arch_bump.dds  sponza_arch_diff.dds  sponza_arch_spec.dds  sponza_ceiling_a_diff.dds  sponza_ceiling_a_spec.dds  sponza_column_a_bump.dds  sponza_column_a_diff.dds  sponza_column_a_spec.dds  sponza_column_b_bump.dds  sponza_column_b_diff.dds  sponza_column_b_spec.dds  sponza_column_c_bump.dds  sponza_column_c_diff.dds  sponza_column_c_spec.dds  sponza_details_diff.dds  sponza_details_spec.dds  sponza_fabric_blue_diff.dds  sponza_fabric_diff.dds  sponza_fabric_green_diff.dds  sponza_fabric_spec.dds  sponza_flagpole_diff.dds  sponza_flagpole_spec.dds  sponza_floor_a_diff.dds  sponza_floor_a_spec.dds  sponza_roof_diff.dds  sponza_thorn_bump.dds  sponza_thorn_diff.dds  sponza_thorn_mask.dds  (+10 more)
assets/grass/: grass.dds  grass.mtl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: litModel.frag  litModel.vert  outlineColor.frag  screen.frag  screen.vert  simple.frag  simple.vert  simpleColor.frag  simpleLightSource.frag  text.frag  text.vert
src/: camera.cpp  camera.h  common.cpp  common.h  main.cpp  main.h  shader.cpp  shader.h  utils.cpp  utils.h
tools/: preprocess_images.py
